feat(group): leader get detail
